infrastructure/kubernetes/base/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blockguardian-database
  labels:
    app: blockguardian-database
    component: database
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
      name: mysql
  selector:
    app: blockguardian-database
    component: database
